--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,7 +50,194 @@
           {{ content }}
           <a href='https://ad1uqnq.blogspot.com' title='ad1'><amp-img src="https://img.uqnq.my.id/ad1.png" width="600" height="600" layout="responsive"></amp-img></a> 
           
-          {{ page.title }} - post
+          {{ page.title }} - 1. Arti mimpi dibenci orang yang kamu suka adalah “aku tidak mau dibenci orang lain”<br />
+Arti mimpi dibenci oleh seseorang yang kamu sukai menyiratkan bahwa hubungan kamu dengan orang lain akan berkembang .<br />
+<br />
+Pertama-tama, mimpi ini adalah mimpi yang mudah dilihat ketika psikologi "Saya tidak ingin dibenci oleh seseorang yang saya suka" kuat.<br />
+<br />
+Jangan khawatir, itu sebenarnya tidak dibenci.<br />
+<br />
+Dengan segala cara, mari perpendek jarak melalui komunikasi biasa.<br />
+<br />
+Mimpi ini adalah mimpi buruk, jadi sekarang aku harus bisa menerimanya.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Apa artinya dibenci oleh seseorang yang Anda sukai? Diagnosis implikasi spiritual!<br />
+Ketuk untuk bergerak<br />
+<br />
+2. Arti mimpi dicampakan orang yang disukai adalah “Saya tidak percaya diri”<br />
+Arti mimpi dicampakkan oleh seseorang yang kamu sukai adalah pertanda bahwa kamu tidak percaya diri dalam cinta dan penuh kecemasan .<br />
+<br />
+Saya merasa seperti akan kewalahan oleh perasaan, "Bagaimana jika saya mengaku kepada orang lain dan dibuang?"<br />
+<br />
+Jika Anda tidak dapat menikmati cinta apa adanya, ekspresi Anda akan menjadi keruh dan pesona Anda akan berkurang.<br />
+<br />
+Disarankan juga untuk mencoba bermain dengan teman atau melakukan hal lain untuk menyegarkan diri.<br />
+<br />
+Ketika senyum indahmu kembali, cobalah untuk bertemu seseorang yang kamu sukai lagi.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Apa artinya bermimpi dicampakkan oleh seseorang yang Anda sukai? Diagnosis implikasi spiritual!<br />
+Ketuk untuk bergerak<br />
+<br />
+3. Arti mimpi dimarahi orang yang kamu sukai adalah “Aku ingin kamu tertarik dengan orang lain”<br />
+Arti mimpi dimarahi oleh orang yang anda sukai merupakan perwujudan dari keinginan anda untuk dimanja atau diurus oleh orang yang anda sukai .<br />
+<br />
+Padahal, itu menyiratkan bahwa Anda belum tertarik, jadi mari kenali Anda terlebih dahulu.<br />
+<br />
+Salam santai yang biasa sangat penting, jadi tolong lakukan.<br />
+<br />
+Jika Anda bisa masuk ke dalam kehidupan sehari-hari orang lain, sebaiknya dekati mereka secara proaktif.<br />
+<br />
+Anda harus bisa bergaul hanya dengan melakukan komunikasi normal.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Apa artinya marah dengan seseorang yang Anda sukai? Diagnosis implikasi spiritual!<br />
+Ketuk untuk bergerak<br />
+<br />
+4. Arti mimpi orang yang kamu sukai bergaul dengan orang lain adalah "Aku ingin tahu apakah aku bisa mendekatimu."<br />
+Jika orang yang Anda sukai dalam mimpi Anda bergaul dengan orang lain, itu berarti Anda bertanya-tanya apakah akan mendekati .<br />
+<br />
+Dalam hal ini, itu adalah manifestasi dari kecemasan, "Apa yang harus saya lakukan jika orang yang saya sukai memiliki kekasih?"<br />
+<br />
+Itu karena kamu tidak percaya diri.<br />
+<br />
+Jika Anda mendekati tanpa rasa percaya diri, kemungkinan Anda gagal lebih tinggi.<br />
+<br />
+Apa pun yang Anda lakukan, lakukan apa yang Anda bisa dan bangun kepercayaan diri Anda.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Apa arti mimpi di mana orang yang Anda sukai bergaul dengan orang lain? Diagnosis implikasi spiritual!<br />
+Ketuk untuk bergerak<br />
+<br />
+5. Arti mimpi orang yang anda suka punya pacar adalah "sepertinya saya tidak punya denyut nadi".<br />
+Memimpikan seseorang yang Anda sukai punya pacar berarti Anda tidak percaya diri .<br />
+<br />
+Jika anda berhubungan baik dengan orang lain, anda dapat memiliki sedikit harapan, namun dalam mimpi ini sepertinya anda telah menyerah setengahnya.<br />
+<br />
+Anda tidak harus menyerah pada seseorang yang Anda sukai, jadi Anda harus mencoba memperbaiki diri terlebih dahulu.<br />
+<br />
+Apa pun baik-baik saja, jadi tolong bangun kepercayaan diri Anda dari tempat Anda merasa nyaman.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Apa arti mimpi di mana orang yang Anda sukai punya pacar? Diagnosis implikasi spiritual!<br />
+Ketuk untuk bergerak<br />
+<br />
+6. Arti mimpi yang dihindari orang yang kamu sukai adalah “hubungan kemungkinan besar akan semakin dalam.”<br />
+Jika kamu bermimpi dihindari oleh seseorang yang kamu sukai, itu menandakan bahwa hubungan kamu dengan orang itu mungkin semakin dalam .<br />
+<br />
+Arti mimpi bereaksi negatif oleh orang yang dicintai didasarkan pada kecemasan karena tidak disukai.<br />
+<br />
+Nyatanya, itu adalah mimpi yang Anda lihat karena jarak antara Anda berdua semakin dekat, jadi mari tingkatkan komunikasi secara aktif.<br />
+<br />
+Jika Anda ingin lebih dekat dengan orang yang Anda sukai, ambil tindakan sendiri.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Apa arti mimpi yang bisa dihindari oleh seseorang yang Anda sukai? Diagnosis implikasi spiritual!<br />
+Ketuk untuk bergerak<br />
+<br />
+7. Arti mimpi dicuekin sama orang yang kamu suka adalah ``kemungkinan maju bersama orang yang kamu suka.''<br />
+Jika kamu bermimpi bersikap dingin terhadap seseorang yang kamu cintai, banyak orang akan menganggapnya negatif, tetapi sebenarnya itu adalah mimpi terbalik .<br />
+<br />
+Bisa dikatakan bahwa itu adalah mimpi yang mengungkapkan psikologi yang anda khawatirkan “bagaimana jika anda kedinginan”.<br />
+<br />
+Padahal, itu adalah mimpi yang menyiratkan bahwa hubungan dengan pihak lain akan berkembang, jadi mari tingkatkan komunikasi dengan percaya diri.<br />
+<br />
+Jika Anda mendekati dengan jujur, jarak antara keduanya pasti akan menyusut.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Apa artinya bersikap dingin terhadap seseorang yang Anda sukai? Diagnosis implikasi spiritual!<br />
+Ketuk untuk bergerak<br />
+<br />
+8. Arti mimpi diabaikan orang yang anda sukai adalah “Saya pikir anda akan mendapatkan reputasi yang baik dari orang lain”<br />
+Jika Anda diabaikan oleh seseorang yang Anda sukai dalam mimpi, itu menandakan bahwa orang lain tersebut memiliki kesan yang baik terhadap Anda .<br />
+<br />
+Sangat mudah untuk berpikir, "Apakah tidak ada denyut nadi?", tetapi arti sebenarnya adalah sebaliknya.<br />
+<br />
+Jangan salah paham dengan saya karena saya tidak dibenci dengan cara apa pun.<br />
+<br />
+Pertama-tama, mimpi yang menunjukkan psikologi "Bagaimana jika aku membencimu?"<br />
+<br />
+Karena Anda hanya merasa terlalu cemas, yang terbaik adalah mendekatinya dengan jujur ​​tanpa berpikir aneh.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Apa artinya diabaikan oleh seseorang yang Anda sukai? Diagnosis implikasi spiritual!<br />
+Ketuk untuk bergerak<br />
+<br />
+9. Arti mimpi orang yang kamu sukai ketus adalah "Aku khawatir jika kamu tidak menyukaiku."<br />
+Jika orang yang Anda sukai tidak keren dalam mimpi Anda, itu berarti Anda kehilangan kepercayaan pada cinta .<br />
+<br />
+Ini karena mencerminkan psikologi "Bagaimana jika aku membencimu" dan "Aku tidak ingin kedinginan".<br />
+<br />
+Nyatanya, saya tidak dibenci, dan saya tidak boleh kedinginan.<br />
+<br />
+Jika Anda masih berpikir demikian, Anda harus memperbaiki diri dan mendapatkan kepercayaan diri.<br />
+<br />
+Cobalah untuk fokus meningkatkan penegasan diri Anda sekarang daripada mendekati lawan Anda.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Apa artinya bermimpi bahwa seseorang yang Anda sukai itu kasar? Diagnosis implikasi spiritual!<br />
+Ketuk untuk bergerak<br />
+<br />
+10. Arti mimpi tidak dapat bertemu dengan orang yang disukai adalah “menunjukkan cinta saat ini”<br />
+Mimpi di mana anda tidak dapat bertemu dengan seseorang yang anda sukai adalah mimpi yang mewakili cinta anda saat ini .<br />
+<br />
+Jika kamu mencoba untuk bertemu seseorang yang kamu sukai dalam mimpi kamu, itu pertanda keberuntungan cinta kamu meningkat.<br />
+<br />
+Ambil pendekatan proaktif untuk memperdalam hubungan.<br />
+<br />
+Namun, jika Anda menyerah, itu menunjukkan bahwa Anda akan turun.<br />
+<br />
+Saat ini, coba dekati dengan hati-hati tanpa terburu-buru.<br />
+<br />
+Silakan lakukan apa yang terbaik untuk situasi Anda.<br />
+<br />
+<br />
+11. Arti mimpi berpapasan dengan orang yang anda sukai adalah “jaraknya cenderung menciut”<br />
+Jika kamu bermimpi melewati seseorang yang kamu sukai, itu pertanda bahwa kamu memiliki kesempatan untuk lebih dekat dengan orang yang kamu cintai .<br />
+<br />
+Jika menurut Anda Anda dapat melakukan sedikit percakapan, atau jika Anda merasa dapat berkomunikasi dengan cara tertentu, mari aktif memperdalam hubungan.<br />
+<br />
+Jika Anda dapat membangun hubungan yang tepat, jaraknya akan menyusut secara alami.<br />
+<br />
+Terhubung tidaklah sulit.<br />
+<br />
+Jangan lewatkan kesempatan Anda!<br />
+<br />
+<br />
+12. Arti mimpi orang yang anda suka selingkuh adalah “mencurigai orang lain”<br />
+Jika kamu bermimpi orang yang kamu suka selingkuh, itu pertanda kamu curiga dengan orang yang kamu suka .<br />
+<br />
+Jika Anda memiliki kekhawatiran, jangan ragu untuk bertanya atau memberi tahu mereka dengan jujur ​​untuk menjernihkan kebingungan.<br />
+<br />
+Namun, jika Anda terganggu dengan menyelesaikan perasaan Anda dan terlalu meragukan pasangan Anda, Anda mungkin akan membencinya.<br />
+<br />
+Harap berhati-hati bagaimana Anda mendengarkan.<br />
+<br />
+Artikel referensi<br />
+[Interpretasi Mimpi] Arti mimpi selingkuh | Diagnosis implikasi spiritual sesuai situasi!<br />
+Ketuk untuk bergerak<br />
+<br />
+13. Arti mimpi diperingatkan oleh seseorang yang kamu sukai adalah "Aku ingin kamu menjagaku."<br />
+Jika kamu bermimpi seseorang yang kamu sukai akan berhati-hati, itu pertanda psikologi kamu bahwa kamu ingin orang lain menjaga kamu .<br />
+<br />
+Diperingatkan atau dimarahi berarti Anda terganggu.<br />
+<br />
+Jika Anda ingin mereka lebih memperhatikan Anda, memberi Anda lebih banyak perhatian, sebaiknya dekati mereka secara proaktif.<br />
+<br />
+Saya tidak menyarankan mencoba menonjol dan menarik perhatian Anda karena cenderung gagal.<br />
+<br />
+Sangat menyenangkan untuk jujur ​​dan mudah dimengerti.<br />
+<br />
+<br />
+14. Arti mimpi dibuntuti orang yang kamu suka adalah "Aku telat jatuh cinta".<br />
+Jika kamu bermimpi dihantui oleh seseorang yang kamu sukai, itu artinya kamu cemas karena ingin dicintai oleh orang tersebut .<br />
+<br />
+Psikologi "Aku ingin kamu mengejarku" tercermin dalam mimpi, menandakan bahwa kamu tidak mendekati dirimu sendiri.<br />
+<br />
+Menunggu saja tidak akan berubah, jadi penting untuk terlebih dahulu memperbaiki diri dan membangun kepercayaan diri.<br />
+<br />
+Cobalah untuk mengambil tindakan sedikit demi sedikit dan buat mereka tetap tertarik.
           
           <p>And</p>
         </div>
